Made discord events run on the main game thread