@@ -28,6 +28,15 @@ import java.util.function.Supplier;
 
 
 public class DiscordEvents extends Event {
+    
+    private static final Supplier<ServerCommandSource> DEFAULT_SOURCE_SUPPLIER = () -> {
+        try {
+            return CarpetServer.minecraft_server.getCommandSource().withWorld(CarpetServer.minecraft_server.getWorld(World.OVERWORLD));
+        } catch (NullPointerException npe) {
+            return null;
+        }
+    };
+    
     public static void noop() {} //to load events before scripts do
 
     public DiscordEvents(String name, int reqArgs, boolean isGlobalOnly) {
@@ -38,17 +47,10 @@ public class DiscordEvents extends Event {
 
     public static DiscordEvents DISCORD_MESSAGE = new DiscordEvents("discord_message", 1, false) {
         public void onDiscordMessage(Bot bot, Message message) {
-            if(bot == null) return;
-            if(CarpetServer.minecraft_server != null && !CarpetServer.minecraft_server.isRunning()) return; //prevent errors when message comes while stopping
-            callHandlerInBotApps(bot,() -> {
-                return Arrays.asList(new MessageValue(message));
-            }, () -> {
-                try {
-                    return CarpetServer.minecraft_server.getCommandSource().withWorld(CarpetServer.minecraft_server.getWorld(World.OVERWORLD));
-                } catch (NullPointerException npe) {
-                    return null;
-                }
-            });
+            callHandlerInBotApps(bot,
+                    () -> List.of(new MessageValue(message)),
+                    DEFAULT_SOURCE_SUPPLIER
+            );
         }
     };
 
@@ -56,17 +58,10 @@ public class DiscordEvents extends Event {
 
     public static DiscordEvents DISCORD_REACTION = new DiscordEvents("discord_reaction", 3, false) {
         public void onDiscordReaction(Bot bot, Reaction reaction, User user, boolean added) {
-            if(bot == null) return;
-            if(CarpetServer.minecraft_server != null && !CarpetServer.minecraft_server.isRunning()) return; //prevent errors when message comes while stopping
-            callHandlerInBotApps(bot,() -> {
-                return Arrays.asList(new ReactionValue(reaction),new UserValue(user), BooleanValue.of(added));
-            }, () -> {
-                try {
-                    return CarpetServer.minecraft_server.getCommandSource().withWorld(CarpetServer.minecraft_server.getWorld(World.OVERWORLD));
-                } catch (NullPointerException npe) {
-                    return null;
-                }
-            });
+            callHandlerInBotApps(bot,
+                    () -> List.of(new ReactionValue(reaction),new UserValue(user), BooleanValue.of(added)), 
+                    DEFAULT_SOURCE_SUPPLIER
+            );
         }
     };
 
@@ -75,17 +70,10 @@ public class DiscordEvents extends Event {
 
     public static DiscordEvents DISCORD_SLASH_COMMAND = new DiscordEvents("discord_slash_command", 1, false) {
         public void onDiscordSlashCommand(Bot bot, SlashCommandInteraction slashCommandInteraction) {
-            if(bot == null) return;
-            if(CarpetServer.minecraft_server != null && !CarpetServer.minecraft_server.isRunning()) return; //prevent errors when message comes while stopping
-            callHandlerInBotApps(bot,() -> {
-                return Arrays.asList(new SlashCommandInteractionValue(slashCommandInteraction));
-            }, () -> {
-                try {
-                    return CarpetServer.minecraft_server.getCommandSource().withWorld(CarpetServer.minecraft_server.getWorld(World.OVERWORLD));
-                } catch (NullPointerException npe) {
-                    return null;
-                }
-            });
+            callHandlerInBotApps(bot,
+                    () -> List.of(new SlashCommandInteractionValue(slashCommandInteraction)), 
+                    DEFAULT_SOURCE_SUPPLIER
+            );
         }
     };
 
@@ -94,17 +82,10 @@ public class DiscordEvents extends Event {
 
     public static DiscordEvents DISCORD_BUTTON = new DiscordEvents("discord_button", 1, false) {
         public void onDiscordButton(Bot bot, ButtonInteraction buttonInteraction) {
-            if(bot == null) return;
-            if(CarpetServer.minecraft_server != null && !CarpetServer.minecraft_server.isRunning()) return; //prevent errors when message comes while stopping
-            callHandlerInBotApps(bot,() -> {
-                return Arrays.asList(new ButtonInteractionValue(buttonInteraction));
-            }, () -> {
-                try {
-                    return CarpetServer.minecraft_server.getCommandSource().withWorld(CarpetServer.minecraft_server.getWorld(World.OVERWORLD));
-                } catch (NullPointerException npe) {
-                    return null;
-                }
-            });
+            callHandlerInBotApps(bot,
+                    () -> List.of(new ButtonInteractionValue(buttonInteraction)),
+                    DEFAULT_SOURCE_SUPPLIER
+            );
         }
     };
 
@@ -113,21 +94,15 @@ public class DiscordEvents extends Event {
 
     public static DiscordEvents DISCORD_SELECT_MENU = new DiscordEvents("discord_select_menu", 1, false) {
         public void onDiscordSelectMenu(Bot bot, SelectMenuInteraction selectMenuInteraction) {
-            if(bot == null) return;
-            if(CarpetServer.minecraft_server != null && !CarpetServer.minecraft_server.isRunning()) return; //prevent errors when message comes while stopping
-            callHandlerInBotApps(bot,() -> {
-                return Arrays.asList(new SelectMenuInteractionValue(selectMenuInteraction));
-            }, () -> {
-                try {
-                    return CarpetServer.minecraft_server.getCommandSource().withWorld(CarpetServer.minecraft_server.getWorld(World.OVERWORLD));
-                } catch (NullPointerException npe) {
-                    return null;
-                }
-            });
+            callHandlerInBotApps(bot,
+                    () -> List.of(new SelectMenuInteractionValue(selectMenuInteraction)), 
+                    DEFAULT_SOURCE_SUPPLIER
+            );
         }
     };
 
     public void callHandlerInBotApps(Bot triggerBot, Supplier<List<Value>> argumentSupplier, Supplier<ServerCommandSource> cmdSourceSupplier) {
+        if(CarpetServer.minecraft_server != null && !CarpetServer.minecraft_server.isRunning()) return; //prevent errors when event triggers while stopping server
         ((CallbackListAccessor) handler).callRemoveCallsIf(callback -> !triggerBot.equals(Discarpet.getBotInHost(CarpetServer.scriptServer.getAppHostByName(callback.host))));
         handler.call(argumentSupplier,cmdSourceSupplier);
     }
